--- a/game2048.cabal
+++ b/game2048.cabal
@@ -16,9 +16,10 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable game2048
-  -- main-is:
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base >=4.6 && <4.7
-  -- hs-source-dirs:
   default-language:    Haskell2010
+  ghc-options:         -Wall
+  hs-source-dirs:      src
+  main-is:             Main.hs
+  build-depends:
+      base >=4.6 && < 4.7
+    , random >= 1.0 && < 1.1
