--- a/game2048.cabal
+++ b/game2048.cabal
@@ -17,13 +17,15 @@ cabal-version:       >=1.10
 
 executable game2048
   default-language:    Haskell2010
-  ghc-options:         -Wall
+  ghc-options:         -Wall -threaded
   hs-source-dirs:      src
   main-is:             Main.hs
   build-depends:
       base >=4.6 && < 4.7
+    , deepseq >= 1.3 && < 1.4
     , lifted-base >= 0.2 && < 0.3
     , mtl >= 2.1 && < 2.2
+    , parallel >= 3.2 && < 3.3
     , random >= 1.0 && < 1.1
     , time >= 1.4 && < 1.5
     , transformers >= 0.3 && < 0.4
