--- a/game2048.cabal
+++ b/game2048.cabal
@@ -22,6 +22,7 @@ executable game2048
   main-is:             Main.hs
   build-depends:
       base >=4.6 && < 4.7
+    , containers >= 0.5 && < 0.6
     , deepseq >= 1.3 && < 1.4
     , lifted-base >= 0.2 && < 0.3
     , mtl >= 2.1 && < 2.2
