--- a/game2048.cabal
+++ b/game2048.cabal
@@ -46,14 +46,25 @@ executable game2048
       base >= 4.6 && < 4.7
     , game2048 >= 0.1 && < 0.2
 
+executable bench
+  default-language:    Haskell2010
+  ghc-options:         -Wall -threaded
+  hs-source-dirs:      .
+  main-is:             Bench.hs
+  build-depends:
+      base >= 4.6 && < 4.7
+    , game2048 >= 0.1 && < 0.2
+    , time >= 1.4 && < 1.5
+
 test-suite tests
   default-language: Haskell2010
   type: exitcode-stdio-1.0
   main-is: Test.hs
   hs-source-dirs: test
-  ghc-options: -Wall -threaded
+  ghc-options: -threaded
   build-depends:
       base >= 4.6 && < 4.7
+    , HUnit >= 1.2 && < 1.3
     , game2048 >= 0.1 && < 0.2
     , test-framework-hunit >= 0.3 && < 0.4
     , test-framework-quickcheck >= 0.3 && < 0.4
