--- a/game2048.cabal
+++ b/game2048.cabal
@@ -18,7 +18,7 @@ cabal-version:       >=1.10
 library
   default-language: Haskell2010
   hs-source-dirs: src
-  ghc-options: -O2 -Wall -threaded
+  ghc-options: -O2 -Wall
   ghc-prof-options: -fprof-auto
   exposed-modules:
     Game2048.AI
@@ -32,15 +32,15 @@ library
     Game2048.Tile
     Game2048.Util
   build-depends:
-      base >=4.6 && < 4.7
+      base >=4.6
     , containers >= 0.5 && < 0.6
-    , deepseq >= 1.3 && < 1.4
-    , mtl >= 2.1 && < 2.2
+    , deepseq >= 1.3
+    , mtl >= 2.1
     , parallel >= 3.2 && < 3.3
-    , random >= 1.0 && < 1.1
-    , time >= 1.4 && < 1.5
-    , transformers >= 0.3 && < 0.4
-    , vector >= 0.10 && < 0.11
+    , random >= 1.0
+    , time >= 1.4
+    , transformers >= 0.3
+    , vector >= 0.10
 
 executable game2048
   default-language:    Haskell2010
@@ -49,8 +49,8 @@ executable game2048
   hs-source-dirs:      .
   main-is:             Main.hs
   build-depends:
-      base >= 4.6 && < 4.7
-    , game2048 >= 0.1 && < 0.2
+      base >= 4.6
+    , game2048
 
 executable bench
   default-language:    Haskell2010
@@ -59,9 +59,9 @@ executable bench
   hs-source-dirs:      .
   main-is:             Bench.hs
   build-depends:
-      base >= 4.6 && < 4.7
-    , game2048 >= 0.1 && < 0.2
-    , time >= 1.4 && < 1.5
+      base >= 4.6
+    , game2048
+    , time >= 1.4
 
 test-suite tests
   default-language: Haskell2010
@@ -71,9 +71,9 @@ test-suite tests
   ghc-options: -O2 -threaded
   ghc-prof-options: -fprof-auto
   build-depends:
-      base >= 4.6 && < 4.7
-    , HUnit >= 1.2 && < 1.3
-    , game2048 >= 0.1 && < 0.2
-    , test-framework-hunit >= 0.3 && < 0.4
-    , test-framework-quickcheck >= 0.3 && < 0.4
-    , test-framework-th >= 0.2 && < 0.3
+      base >= 4.6
+    , HUnit >= 1.2
+    , game2048
+    , test-framework-hunit >= 0.3
+    , test-framework-quickcheck >= 0.3
+    , test-framework-th >= 0.2
